Added chapter 2 of dissertation

--- a/Dissertacao/ProjetoFelipeClaudio/TesePack.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/TesePack.tex
@@ -19,6 +19,8 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{portland,multirow}
+\usepackage{subcaption}
+\usepackage{float}
 
 \setcounter{secnumdepth}{3}	% numeracao ate subsubsecao
 \setcounter{tocdepth}{2}	% indice ate subsubsecao
