--- a/Dissertacao/ProjetoFelipeClaudio/Capa.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/Capa.tex
@@ -1,15 +1,17 @@
 \includegraphics[scale=0.7]{Poli.eps}
 
 \begin{center}
-\large{PROCESSAMENTO DIGITAL DE IMAGENS E TEORIA DA COMPUTAÇÃO APLICADOS À MODELAGEM DOS PROCESSOS EMOCIONAIS HUMANOS}\\
+\large{Título}\\
    \vspace{2cm}
-\large{Flávio Luis de Mello}\\
+\large{Felipe Claudio da Silva Santos}\\
 \end{center}
    \vspace{3cm}
 \hspace{7cm}
 \hfill \parbox{8.0cm}{Projeto de Graduação apresentado ao Curso de Engenharia Eletrônica e de Computação da Escola Politécnica, Universidade Federal do Rio de Janeiro, como parte dos requisitos necessários à obtenção do título de Engenheiro.\\}
    \vspace{2cm}
-\hfill \parbox{8.0cm}{Orientador: Alan Mathison Turing} \\
+\hfill \parbox{8.0cm}{Orientador: Luiz Pereira Calôba \newline 
+	Coorientador: Nathanael Nunes de Moura Junior
+} \\
    \vspace{2cm}
 \begin{center}
 Rio de Janeiro
@@ -24,9 +26,9 @@ Outubro de 2008
 
 
 \begin{center}
-\large{PROCESSAMENTO DIGITAL DE IMAGENS E TEORIA DA COMPUTAÇÃO APLICADOS À MODELAGEM DOS PROCESSOS EMOCIONAIS HUMANOS}\\
+\large{Título}\\
    \vspace{1cm}
-\large{Flávio Luis de Mello}\\
+\large{Felipe Claudio da Silva Santos}\\
 \end{center}
    \vspace{2cm}
 PROJETO DE GRADUAÇÃO SUBMETIDO AO CORPO DOCENTE DO CURSO DE ENGENHARIA ELETRÔNICA E DE COMPUTAÇÃO DA ESCOLA POLITÉCNICA DA UNIVERSIDADE FEDERAL DO RIO DE JANEIRO COMO PARTE DOS REQUISITOS NECESSÁRIOS PARA A OBTENÇÃO DO GRAU DE ENGENHEIRO ELETRÔNICO E DE COMPUTAÇÃO   
@@ -39,7 +41,7 @@ Autor:
             \hrulefill
 
             \vspace{-.375cm}
-            \centering{Fl\'avio Luis de Mello}
+            \centering{Felipe Claudio da Silva Santos}
 
             \vspace{0.1cm}
          }
@@ -53,7 +55,33 @@ Orientador:
             \hrulefill
 
             \vspace{-.375cm}
-            \centering{Prof. Alan Mathison Turing, Ph. D.}
+            \centering{Prof. Luis Pereira Calôba, Dr.Ing}
+
+            \vspace{0.1cm}
+         }
+      \end{flushright}
+  
+Co-orientador:
+\vspace{0.5cm}
+\begin{flushright}
+	\parbox{10cm}{
+		\hrulefill
+		
+		\vspace{-.375cm}
+		\centering{Natanael Nunes de Moura Junior, Dr.}
+		
+		\vspace{0.1cm}
+	}
+\end{flushright}
+      
+Examinador:
+      \vspace{0.5cm}
+      \begin{flushright}
+         \parbox{10cm}{
+            \hrulefill
+
+            \vspace{-.375cm}
+            \centering{Examinador 1}
 
             \vspace{0.1cm}
          }
@@ -66,20 +94,7 @@ Examinador:
             \hrulefill
 
             \vspace{-.375cm}
-            \centering{Prof Frances Elizabeth Allen, D. Sc.}
-
-            \vspace{0.1cm}
-         }
-      \end{flushright}
-      
-Examinador:
-      \vspace{0.5cm}
-      \begin{flushright}
-         \parbox{10cm}{
-            \hrulefill
-
-            \vspace{-.375cm}
-            \centering{Prof. Alan Jay Perlis, D. E.}
+            \centering{Examinador 2}
 
             \vspace{0.1cm}
          }
