--- a/Dissertacao/ProjetoFelipeClaudio/biblio.bib
+++ b/Dissertacao/ProjetoFelipeClaudio/biblio.bib
@@ -1,64 +1,32 @@
-@BOOK{
-	Papadimitriou04,
-	AUTHOR = "Harry R Lewis and Chistos H Papadimitriou",
-	TITLE = "Título do livro",
-	PUBLISHER = "Bookman",
-	YEAR = "2004",
-	ADDRESS = "Porto Alegre",}
-
 @MISC{
-	BrainVoyager06,
-	AUTHOR = "P Nettle",
-	TITLE = "Título da URL",
-	HOWPUBLISHED = "http://www.brainvoyager.com/",
-  YEAR = "2006",
-  NOTE = "(Acesso em 05 Janeiro 2006)",}
-  
-@ARTICLE{
-	Heeger02,
-	AUTHOR = "David Heeger and David Ress",
-	TITLE = "Título do artigo",
-	JOURNAL = "Nature Reviews/Neuroscience",
-	VOLUME = "3",
-	YEAR = "2002",
-	PAGES = "142-151",}	
-	
-@INPROCEEDINGS{
-   Canguilhem80,
-   AUTHOR = {Georges Canguilhem},
-   TITLE = {Título do artigo em proceeding},
-   BOOKTITLE = {Georges Canguilhem - Philosophe, historien des sciences: Actes du Colloque},
-   YEAR = {1993},
-   ISBN = {2226062017},
-   PAGES = {11-33},
-   ADDRESS = {Paris},
-   PUBLISHER = {Albin Michel},}
-   
-@MASTERSTHESIS{
-  Fulano03,
-  AUTHOR = "Jorge Fulano",
-	TITLE = "Título da dissertação de mestrado",
-	SCHOOL = "Universidade Federal do Rio de Janeiro",
-	YEAR = "2003",
-	MONTH = "Julho",}
-	
-@INBOOK{
-	Beltrano99,
-	AUTHOR = "Mauro Beltrano",
-	EDITOR = "M J Zigmond",
-	TITLE = "Título do livro onde se consultou um capítulo",
-	PUBLISHER = "Academic Press",
-	CHAPTER = "Membrane potential and action potential",
-	PAGES = "129-154",
-	YEAR = "1999",
-	ADDRESS = "New York",}
-
-@TECHREPORT{
-	Meyer97,
-	AUTHOR = "D E Meyer and D E Kieras",
-	TITLE = "Título da nota tecnica",
-	INSTITUTION = "Department of Psychology, Electrical Engineering \& computer Science Department",
-	ADDRESS = "University of Michigan",
-	NUMBER = "TR-97/ONR-EPIC-08",
-	YEAR = "1997",}
-	
+	MatrizEnergetica,
+	AUTHOR = "Empresa de Pesquisa Energética",
+	TITLE = "Matriz Energética e Elétrica",
+	HOWPUBLISHED = "http://www.epe.gov.br/pt/abcdenergia/matriz-energetica-e-eletrica",
+  	YEAR = "2018",
+  	NOTE = "(Acesso em 26 Janeiro 2019)",
+}
+@MISC{
+	SIN,
+	AUTHOR = "ONS",
+	TITLE = "O Sistema Interligado Nacional",
+	HOWPUBLISHED = "http://ons.org.br/paginas/sobre-o-sin/o-que-e-o-sin",
+	YEAR = "2019",
+	NOTE = "(Acesso em 27 Janeiro 2019)",
+}
+@MISC{
+	SIN_MAPAS,
+	AUTHOR = "ONS",
+	TITLE = "Mapas",
+	HOWPUBLISHED = "http://ons.org.br/paginas/sobre-o-sin/mapas",
+	YEAR = "2019",
+	NOTE = "(Acesso em 27 Janeiro 2019)",
+}
+@MISC{
+	SIN_GOVERNANCIA,
+	AUTHOR = "ONS",
+	TITLE = "Governança",
+	HOWPUBLISHED = "http://ons.org.br/paginas/sobre-o-ons/governanca/assembleia-geral",
+	YEAR = "2019",
+	NOTE = "(Acesso em 27 Janeiro 2019)",
+}
