--- a/Dissertacao/ProjetoFelipeClaudio/cap2.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/cap2.tex
@@ -1,56 +1,47 @@
-\section{Citação}
+\section{Como funciona o sistema elétrico no brasil}
+\paragraph{}O Brasil possui uma matriz elétrica diferente do que em geral é observado no mundo. Em média 65,2\% da energia utilizada no país vem de fontes hidráulicas, diferente do que ocorre em média no resto do mundo (aproximadamente 16,6\%), assim como visto em\cite{MatrizEnergetica}. Essa fonte além de ser renovável, não polui o meio ambiente e tem custos menores quando comparado com fontes baseadas em combustíveis fósseis, assim como visto mais adiante. Apesar de todas essas vantagens, este tipo de geração necessita cuidado e planejamento, já que a energia produzida pelas hidrelétricas depende da disponibilidade de água nas barragens.
 
-\paragraph{}Em um trabalho científico devemos ter sempre a preocupação de fazer referências precisas às idéias, frases ou conclusões de outros autores, isto é, citar a fonte (livro, revista e todo tipo de material produzido gráfica ou eletronicamente) de onde são extraídos esses dados. As citações fundamentam e melhoram a qualidade científica do trabalho, portanto, elas têm a função de oferecer ao leitor condições de comprovar a fonte das quais foram extraídas as idéias, frases ou conclusões, possibilitando-lhe ainda aprofundar o tema/assunto em discussão. Têm ainda como função, acrescentar indicações bibliográficas de reforço ao texto. Veja alguns exemplos:
-
-\paragraph{}É neste cenário que "[...] o desafiador cenário globalizado cumpre um papel essencial na formulação das formas de ação." \cite{Papadimitriou04}.
-
-\paragraph{}Segundo Flávio Mello \cite{BrainVoyager06}, "[...] é claro que o início da atividade geral de formação de atitudes prepara-nos para enfrentar situações atípicas decorrentes do sistema de formação de quadros que corresponde às necessidades [...]".
-
-\paragraph{}De acordo com Flávio Mello \cite{Heeger02}, a certificação de metodologias que nos auxiliam a lidar com o acompanhamento das preferências de consumo causa impacto indireto na reavaliação do orçamento setorial.
-
-\paragraph{}Por outro lado, a mobilidade dos capitais internacionais garante a contribuição de um grupo importante na determinação dos índices pretendidos.  Percebemos, cada vez mais, que o novo modelo estrutural aqui preconizado deve passar por modificações independentemente das condições inegavelmente apropriadas \cite{Canguilhem80}.
-
-\paragraph{}Além disto, a expressão latina \textbf{apud} que significa: citado por, conforme, segundo é utilizada quando se faz referência a uma fonte secundária. Suponha que você teve acesso ao conteúdo do texto de Fulado através do trabalho Beltrano:
-Não obstante, a competitividade nas transações comerciais prepara-nos para enfrentar situações atípicas decorrentes do fluxo de informações. A determinação clara de objetivos garante a contribuição de um grupo importante na determinação dos relacionamentos verticais entre as hierarquias. O incentivo ao avanço tecnológico, assim como a mobilidade dos capitais internacionais desafia a capacidade de equalização de alternativas às soluções ortodoxas (Fulano \cite{Fulano03} apud Beltrano \cite{Beltrano99}).
-
-\section{Figuras}
-
-\paragraph{}Figuras (organogramas, fluxogramas, esquemas, desenhos, fotografias, gráficos, mapas, plantas e outros) constituem unidade autônoma e explicam, ou complementam visualmente o texto, portanto, devem ser inseridas o mais próximo possível do texto a que se referem. Sua identificação deverá aparecer na parte inferior precedida da palavra designativa (figura), seguida de seu número de ordem de ocorrência, do respectivo título e/ou legenda e da fonte, se necessário, tal como na Figura \ref{FigDel}.
-
-\begin{figure}
-\begin{center}
-\parbox[htb]{13.0cm}
-  {
-  \begin{center}
-  \includegraphics[scale=1.0]{logo_del.eps}
-  \caption[\small{Logotipo do DEL. Fonte: DEL/Poli/UFRJ \cite{Meyer97}.}]{\label{FigDel} \small{Logotipo do DEL. Fonte: DEL/Poli/UFRJ \cite{Meyer97}.}}
-  \end{center}
-  }
-\end{center}
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{.47\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{matrizEletrica_mundo.png}
+		\caption[\small{Matriz Elétrica Mundial \cite{MatrizEnergetica}.}]{\label{matrizEletricaMundial} \small{Matriz Elétrica Mundial. Fonte: EPE \cite{MatrizEnergetica}.}}
+		
+	\end{subfigure}\hfill
+	\begin{subfigure}{.43\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{matrizEletrica_brasil.png}
+		\caption[\small{Matriz Elétrica Mundial \cite{MatrizEnergetica}.}]{\label{matrizEletricaBrasil} \small{Matriz Elétrica Brasileira. Fonte: EPE \cite{MatrizEnergetica}.}}
+	\end{subfigure}
+	\caption{Comparação entre a matriz elétrica mundial e a brasileira}
+	\label{fig:MatrizEletricaComparacao}
 \end{figure}
 
-\section{Tabelas}
-\paragraph{}As tabelas são elementos demonstrativos de síntese que apresentam informações tratadas estatisticamente constituindo uma unidade autônoma. Em sua apresentação deve ser observado: (1) o título deverá ser colocado na parte inferior, precedido da palavra Tabela e de seu número de ordem; (2) as fontes e eventuais notas aparecem em seu rodapé, após o fechamento, utilizando-se o tamanho 10; (3) Devem ser inseridas o mais próximo possível do trecho a que se referem, tal como a Tabela \ref{TabIntranet}.
 
-\begin{table}[h]
-	\begin{center}
-	  \caption{Casos de ataques aos computadores da Intranet. Fonte: DEL/Poli/UFRJ \cite{Meyer97}.}
-		\begin{tabular}{|c|c|c|}\hline
-		  \textbf{Número I}P & \textbf{Ataques} & \textbf{Ataques bem sucedidos} \\ \hline \vspace{-1.0mm}
-		  192.168.0.120 & 54 & 1 \\ \hline \vspace{-1.0mm}
-		  192.168.0.123 & 36 & 2 \\ \hline \vspace{-1.0mm}
-		  192.168.0.129 & 25 & 4 \\ \hline \vspace{-1.0mm}
-		  192.168.0.130 & 16 & 0 \\ \hline \vspace{-1.0mm}
-		  192.168.0.141 & 29 & 3 \\ \hline \vspace{-1.0mm}
-		  \textbf{Total} & \textbf{160} & \textbf{10} \\ \hline
-		\end{tabular}
-	\end{center}
-	\label{TabIntranet}
-\end{table}
+\paragraph{}O Sistema Interligado Nacional - SIN é composto por toda estrutura responsável pela geração, distribuição e consumo de energia no Brasil\cite{SIN}. Devido ao tamanho do país, a pluralidade climática e geográfica existente, o SIN é divido em quatro subsistemas para facilitar a administração. Esses subsistemas são: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. Apesar dessa divisão para facilitar o planejamento, há conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca, como será visto posteriormente. 
 
-\section{Numeração de páginas}
+\begin{figure}[H]
+	\begin{center}
+		\parbox[htb]{13.0cm}
+		{
+			\begin{center}
+				\includegraphics[scale=0.6]{SistemadeTransmissao_Horizonte2017.jpg}
+				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 \cite{SIN_MAPAS} }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{SIN_MAPAS}}}
+			\end{center}
+		}
+	\end{center}
+\end{figure}
 
-\paragraph{}O aluno deve observar atentamente a numeração de páginas de seu projeto. A primeira parte deste modelo de projeto final, composta pela dedicatória, agradecimento, resumo, abstract, siglas, sumário, lista de figuras e lista de tabelas, é numerada seqüencialmente utilizando algarismos romanos minúsculos. As demais folhas, descritas na segunda parte deste modelo, são numeradas seqüencialmente utilizando algarismos arábicos.
+\paragraph{} Participam desse sistema diversos agentes\cite{SIN_GOVERNANCIA}, sendo eles: 
+\begin{itemize}
+	\item{Agentes Geradores: são agentes autorizados a gerar energia elétrica para o sistema}
+	\item{Agentes de Trasmissão: são agentes que detem o meios de transmissão de energia}
+	\item{Agentes de Distribuição: são agentes autorizados a distribuir energia contratada dos serviços de transmissão em uma área definida pela concessão}
+	\item{Consumidores Livres: são consumidores que tem a opção de escolher o distribuir de energia, diferente do que acontece no consumo doméstico}
+	\item{Agentes importadores: gente titular de autorização expedida pela ANEEL para exercer as atividades de importação de energia elétrica*}
+	\item{Agente exportadores: São agentes titulares de autorização para implantação de sistemas de transmissão associados à exportação de energia elétrica*}
+	\item{Agente Comercializador da Energia de Itaipu: por ser uma usina binacional, segue tratos tratos específicos. Atualmente a a comercializaçao desta energia é coordenada pela Eletrobras}
+\end{itemize}	
 
-\paragraph{}Contudo, exclusivamente para a segunda parte do modelo de projeto, é permitida uma numeração alternativa na qual o aluno poderá numerar as páginas por capítulo. Por exemplo, a primeira página deste Capítulo 2 - Informações Adicionais, poderia ser escrita como 2.1. Além disto, a página seguinte seria 2.2 e a presente página poderia ser escrita como 2.3. A página do Apêndice A - O que é um apêndice, poderia ser escrita como A.1, enquanto que a primeira página do apêndice B seria B.1. Neste caso alternativo específico, a Bibliografia na deverá conter numeração.
 
