Added text to section 2

--- a/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -100,6 +100,11 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}UFRJ - Universidade Federal do Rio de Janeiro
 \paragraph{}EPE - Empresa de Pesquisa Energética
 \paragraph{}SIN - Sistema Interligado Nacional
+\paragraph{}SEB - Sistema Elétrico Brasileiro
+\paragraph{}RE-SEB - Reestruturação do Sistema Elétrico Brasileiro
+\paragraph{}ANEEL - Agência Nacional de Energia Elétrica
+\paragraph{}MME - Ministério de Minas e Energias
+\paragraph{}CCEE - Câmara de Comercialização de Energia Elétrica 
 
 \pagebreak
 
