--- a/Dissertacao/ProjetoFelipeClaudio/biblio.bib
+++ b/Dissertacao/ProjetoFelipeClaudio/biblio.bib
@@ -30,3 +30,18 @@
 	YEAR = "2019",
 	NOTE = "(Acesso em 27 Janeiro 2019)",
 }
+@PHDTHESIS{
+	EvolucaoSetorEletrico,
+	AUTHOR = "Bruno Gonçalves Da Silva",
+	TITLE = "Evolução do setor elétrico brasileiro no contexto econômico nacional: Uma análise histórica e econométrica de longo prazo",
+	SCHOOL = "Universidade de São Paulo -
+	Programa de pós-graduação em energia EP-FEA-IEE-IF",
+	YEAR = "2011",
+}
+@MASTERSTHESIS{
+	AlteracaoModeloComercializacao,
+	AUTHOR = "Edimilson Ferreira da Silva",
+	TITLE = "Principais Condicionantes das alterações no modelo de comercialização ",
+	SCHOOL = "Escola Politécnica da Universidade de São Paulo",
+	YEAR = "2008",
+}
