--- a/Dissertacao/ProjetoFelipeClaudio/cap2.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/cap2.tex
@@ -1,3 +1,25 @@
+\section{Histórico do sistema elétrico brasileiro}
+
+\paragraph{}No começo da década de 90 a estrutura era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição). Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que "a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária"\cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a a Light (21/05/1196) e a CERJ(20/11//1996)\cite{EvolucaoSetorEletrico}.
+
+\paragraph{}Assim como mencionado, um dos pilares do RE-SEB era a regulamentação. Sendo assim, em 1996 foi criada a Agência Nacional de Energia Elétrica - ANEEL, a qual tinha como função regular, e fiscalizar a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.
+
+\paragraph{}Foram aprovadas medidas que incentivavam a realização de contratos de longo prazo entre distribuidores e geradores
+\cite{EvolucaoSetorEletrico}. Além disso foi dado livre acesso aos para pequenos produtores (potenciais hidráulicos menores que 1MW e usinas termoelétricas com potencial inferior a 5MW)  ao sistemas de transmissão e distribuição das concessionárias e permissionárias do serviço publico. Isto facilitou o aparecimento de novas fontes de energias e novos produtores no SEB.
+
+\paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um período seco e mudanças estruturais que implementadas no SEB. De forma a buscar melhor gestão, evitar esse incidentes, garantir a qualidade e incentivar a expansão do sistema, foram então criados novos agentes, sendo alguns deles:
+
+\begin{itemize}
+	\item { \textbf{Ministério de Minas e Energias - MME}: Reponsável pela formulação e implantação de políticas relacionadas ao setor elétrico}
+	\item {\textbf{Agência Nacional de Energia Elétrica - ANEEL}: Regula, e fiscaliza a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal}
+	\item{\textbf{Câmara de Comercialização de Energia Elétrica - CCEE}: TO DO}
+\end{itemize}
+
+\paragraph{} Crise de 2007
+
+\paragraph{} Crise de 2014-207
+
+
 \section{Como funciona o sistema elétrico no brasil}
 \paragraph{}O Brasil possui uma matriz elétrica diferente do que em geral é observado no mundo. Em média 65,2\% da energia utilizada no país vem de fontes hidráulicas, diferente do que ocorre em média no resto do mundo (aproximadamente 16,6\%), assim como visto em\cite{MatrizEnergetica}. Essa fonte além de ser renovável, não polui o meio ambiente e tem custos menores quando comparado com fontes baseadas em combustíveis fósseis, assim como visto mais adiante. Apesar de todas essas vantagens, este tipo de geração necessita cuidado e planejamento, já que a energia produzida pelas hidrelétricas depende da disponibilidade de água nas barragens.
 
@@ -9,7 +31,7 @@
 		\caption[\small{Matriz Elétrica Mundial \cite{MatrizEnergetica}.}]{\label{matrizEletricaMundial} \small{Matriz Elétrica Mundial. Fonte: EPE \cite{MatrizEnergetica}.}}
 		
 	\end{subfigure}\hfill
-	\begin{subfigure}{.43\textwidth}
+	\begin{subfigure}{.48\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{matrizEletrica_brasil.png}
 		\caption[\small{Matriz Elétrica Mundial \cite{MatrizEnergetica}.}]{\label{matrizEletricaBrasil} \small{Matriz Elétrica Brasileira. Fonte: EPE \cite{MatrizEnergetica}.}}
@@ -19,29 +41,54 @@
 \end{figure}
 
 
-\paragraph{}O Sistema Interligado Nacional - SIN é composto por toda estrutura responsável pela geração, distribuição e consumo de energia no Brasil\cite{SIN}. Devido ao tamanho do país, a pluralidade climática e geográfica existente, o SIN é divido em quatro subsistemas para facilitar a administração. Esses subsistemas são: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. Apesar dessa divisão para facilitar o planejamento, há conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca, como será visto posteriormente. 
+\paragraph{}O Sistema Interligado Nacional - SIN é composto por toda estrutura responsável pela geração, distribuição e consumo de energia no Brasil\cite{SIN}. Devido ao tamanho do país, a pluralidade climática e geográfica existente, o SIN é divido em quatro subsistemas para facilitar a administração. Esses subsistemas são: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. O objetivo dessa divisão é facilitar o planejamento. Vale ressaltar que existe conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca, como será visto posteriormente. 
+
 
 \begin{figure}[H]
-	\begin{center}
-		\parbox[htb]{13.0cm}
-		{
-			\begin{center}
-				\includegraphics[scale=0.6]{SistemadeTransmissao_Horizonte2017.jpg}
-				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 \cite{SIN_MAPAS} }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{SIN_MAPAS}}}
-			\end{center}
-		}
-	\end{center}
+	\begin{center}
+
+		\parbox[htb]{13.0cm}
+
+		{
+
+			\begin{center}
+
+				\includegraphics[scale=0.6]{SistemadeTransmissao_Horizonte2017.jpg}
+
+				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 \cite{SIN_MAPAS} }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{SIN_MAPAS}}}
+
+			\end{center}
+
+		}
+
+	\end{center}
+
 \end{figure}
 
 \paragraph{} Participam desse sistema diversos agentes\cite{SIN_GOVERNANCIA}, sendo eles: 
 \begin{itemize}
-	\item{Agentes Geradores: são agentes autorizados a gerar energia elétrica para o sistema}
-	\item{Agentes de Trasmissão: são agentes que detem o meios de transmissão de energia}
-	\item{Agentes de Distribuição: são agentes autorizados a distribuir energia contratada dos serviços de transmissão em uma área definida pela concessão}
-	\item{Consumidores Livres: são consumidores que tem a opção de escolher o distribuir de energia, diferente do que acontece no consumo doméstico}
-	\item{Agentes importadores: gente titular de autorização expedida pela ANEEL para exercer as atividades de importação de energia elétrica*}
-	\item{Agente exportadores: São agentes titulares de autorização para implantação de sistemas de transmissão associados à exportação de energia elétrica*}
-	\item{Agente Comercializador da Energia de Itaipu: por ser uma usina binacional, segue tratos tratos específicos. Atualmente a a comercializaçao desta energia é coordenada pela Eletrobras}
-\end{itemize}	
+	\item{\textbf{Agentes geradores}: são agentes autorizados a gerar energia elétrica para o sistema}
+	\item{\textbf{Agentes de transmissão}: são agentes que detem o meios de transmissão de energia}
+	\item{\textbf{Agentes de distribuição}: são agentes autorizados a distribuir energia contratada dos serviços de transmissão em uma área definida pela concessão}
+	\item{\textbf{Consumidores livres}: são consumidores que tem a opção de escolher o distribuir de energia, diferente do que acontece no consumo doméstico}
+	\item{\textbf{Agentes importadores}: gente titular de autorização expedida pela ANEEL para exercer as atividades de importação de energia elétrica*}
+	\item{\textbf{Agentes exportadores}: São agentes titulares de autorização para implantação de sistemas de transmissão associados à exportação de energia elétrica*}
+	\item{\textbf{Agente comercializador da energia de Itaipu}: por ser uma usina binacional, segue tratos tratos específicos. Atualmente a a comercializaçao desta energia é coordenada pela Eletrobras}
+\end{itemize}
 
+Mercado Livre
+
+Mercado Regulado
+
+Mercado de Curto Prazo
+
+Como funciona a PLD
+
+Histórico da PLD
+
+NEWAVE
+
+DECOMP
+
+Pesquisas na área	
 
