Added text to chapter 2

--- a/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -105,7 +105,12 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}ANEEL - Agência Nacional de Energia Elétrica
 \paragraph{}MME - Ministério de Minas e Energias
 \paragraph{}CCEE - Câmara de Comercialização de Energia Elétrica 
-
+\paragraph{}EPE - Empresa de Energia Elétrica
+\paragraph{}ONS - Operador Nacional do Sistema Elétrico
+\paragraph{}MAE - Mercado Atacadista de Energia
+\paragraph{}CMSE - Comitê de Monitoramento do Setor Elétrico
+\paragraph{}ACR - Ambiente de Contratação Regulada
+\paragraph{}ACL - Ambiente de Contratação Livre
 \pagebreak
 
 
