--- a/Dissertacao/ProjetoFelipeClaudio/biblio.bib
+++ b/Dissertacao/ProjetoFelipeClaudio/biblio.bib
@@ -15,6 +15,15 @@
 	NOTE = "(Acesso em 27 Janeiro 2019)",
 }
 @MISC{
+	ONS_O_QUE_E,
+	AUTHOR = "ONS",
+	TITLE = "O Sistema Interligado Nacional",
+	HOWPUBLISHED = "http://ons.org.br/paginas/sobre-o-ons/o-que-e-ons",
+	YEAR = "2019",
+	NOTE = "(Acesso em 27 Janeiro 2019)",
+}
+
+@MISC{
 	SIN_MAPAS,
 	AUTHOR = "ONS",
 	TITLE = "Mapas",
@@ -30,18 +39,51 @@
 	YEAR = "2019",
 	NOTE = "(Acesso em 27 Janeiro 2019)",
 }
-@PHDTHESIS{
-	EvolucaoSetorEletrico,
-	AUTHOR = "Bruno Gonçalves Da Silva",
-	TITLE = "Evolução do setor elétrico brasileiro no contexto econômico nacional: Uma análise histórica e econométrica de longo prazo",
+@MISC{
+	CCEE_RAZAO_SER,
+	AUTHOR = "CCEE",
+	TITLE = "A CCE",
+	HOWPUBLISHED = "https://bit.ly/2WwORcA",
+	YEAR = "2019",
+	NOTE = "(Acesso em 31 Janeiro 2019)",
+}
+@MISC{
+	CCEE_COM_QUEM_SE_RELACIONA,
+	AUTHOR = "CCEE",
+	TITLE = "Com quem se relaciona",
+	HOWPUBLISHED = "https://bit.ly/2DKYD3r",
+	YEAR = "2019",
+	NOTE = "(Acesso em 31 Janeiro 2019)",
+}
+@MISC{
+	EPE_O_QUE_FAZEMOS,
+	AUTHOR = "EPEP",
+	TITLE = "O que fazemos",
+	HOWPUBLISHED = "http://www.epe.gov.br/pt/a-epe/o-que-fazemos",
+	YEAR = "2019",
+	NOTE = "(Acesso em 31 Janeiro 2019)",
+}
+@PHDTHESIS{
+	EvolucaoSetorEletrico,
+	AUTHOR = "Bruno Gonçalves Da Silva",
+	TITLE = "Evolução do setor elétrico brasileiro no contexto econômico nacional: Uma análise histórica e econométrica de longo prazo",
 	SCHOOL = "Universidade de São Paulo -
-	Programa de pós-graduação em energia EP-FEA-IEE-IF",
-	YEAR = "2011",
+	Programa de pós-graduação em energia EP-FEA-IEE-IF",
+	YEAR = "2011",
 }
 @MASTERSTHESIS{
-	AlteracaoModeloComercializacao,
-	AUTHOR = "Edimilson Ferreira da Silva",
-	TITLE = "Principais Condicionantes das alterações no modelo de comercialização ",
-	SCHOOL = "Escola Politécnica da Universidade de São Paulo",
-	YEAR = "2008",
+	AlteracaoModeloComercializacao,
+	AUTHOR = "Edimilson Ferreira da Silva",
+	TITLE = "Principais Condicionantes das alterações no modelo de comercialização ",
+	SCHOOL = "Escola Politécnica da Universidade de São Paulo",
+	YEAR = "2008",
+}
+@ARTICLE{
+	PRECO_SPOT,
+	AUTHOR = "Nivalde José de Castro",
+	AUTHOR = "André Luis da Silva Leite",
+	TITLE = "Preço spot de eletricidade: teoria e evidências do caso brasileiro",
+	JOURNAL = "IV Encontro de Enconomia Catarinense, 2010, Criciúma",
+	YEAR = "2010",
+}
 }
