--- a/Dissertacao/ProjetoFelipeClaudio/cap2.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/cap2.tex
@@ -1,4 +1,4 @@
-\section{Histórico do sistema elétrico brasileiro}
+\section{Breve histórico do sistema elétrico brasileiro}
 
 \paragraph{}No começo da década de 90 a estrutura era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição). Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que "a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária"\cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a a Light (21/05/1196) e a CERJ(20/11//1996)\cite{EvolucaoSetorEletrico}.
 
@@ -7,20 +7,77 @@
 \paragraph{}Foram aprovadas medidas que incentivavam a realização de contratos de longo prazo entre distribuidores e geradores
 \cite{EvolucaoSetorEletrico}. Além disso foi dado livre acesso aos para pequenos produtores (potenciais hidráulicos menores que 1MW e usinas termoelétricas com potencial inferior a 5MW)  ao sistemas de transmissão e distribuição das concessionárias e permissionárias do serviço publico. Isto facilitou o aparecimento de novas fontes de energias e novos produtores no SEB.
 
-\paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um período seco e mudanças estruturais que implementadas no SEB. De forma a buscar melhor gestão, evitar esse incidentes, garantir a qualidade e incentivar a expansão do sistema, foram então criados novos agentes, sendo alguns deles:
+\paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um período seco e mudanças estruturais que implementadas no SEB. De forma a buscar melhor gestão, evitar esse incidentes, garantir a qualidade e incentivar a expansão do sistema, a organização da estrutura foi modificada, sendo que as instituições responsáveis pelo pleno funcionamento deste modelo são descritos a seguir:\cite{CCEE_COM_QUEM_SE_RELACIONA}:
 
 \begin{itemize}
-	\item { \textbf{Ministério de Minas e Energias - MME}: Reponsável pela formulação e implantação de políticas relacionadas ao setor elétrico}
-	\item {\textbf{Agência Nacional de Energia Elétrica - ANEEL}: Regula, e fiscaliza a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal}
-	\item{\textbf{Câmara de Comercialização de Energia Elétrica - CCEE}: TO DO}
+	\item { \textbf{Ministério de Minas e Energias - MME}: Reponsável pela formulação e implantação de políticas relacionadas ao setor elétrico.}
+	
+	\item{\textbf{Comitê de Monitoramento do Setor Elétrico - CMSE}: Acompanha e avaliar a continuidade e a segurança do suprimento elétrico em todo o território nacional}
+	
+	\item{\textbf{Conselho Nacional de Política Energética - CNPE}: Formula políticas e diretrizes de energia que garantam o suprimento de energia elétrica para todo o país}
+	
+	\item {\textbf{Agência Nacional de Energia Elétrica - ANEEL}: Regula, e fiscaliza a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.}
+	
+	\item{\textbf{Câmara de Comercialização de Energia Elétrica - CCEE}: Atua desde a medição de energia gerada e efetivamente consumida até a liquidação financeira dos contratos de compra e venda no curto prazo \cite{CCEE_RAZAO_SER}. Anteriormente se chamava Mercado Atacadista de Energia - MAE.}
+	
+	\item{\textbf{Operador Nacional do Sistema Elétrico}: Tem como objetivo a coordenação e controle da instalações de geração e transmissão de energia elétrica no Brasil, buscando garantir a todos os agentes o livre acesso à rede de transmissão, o menor custo de expansão do sistema e as melhores condições operacionais futuras \cite{ONS_O_QUE_E}}
+	
+	\item{\textbf{Empresa de Pesquisa Energética - EPE}: Realiza pesquisas em áreas relacionadas com energia elétrica, petróleo, gás biocombustíveis e planejamento energético\cite{EPE_O_QUE_FAZEMOS}.}
+	
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=1\linewidth]{orgaos_governo.jpg}
+		\caption[\small{Instituições do setor elétrico brasileiro \cite{}.}]{\label{instituicoesSEB} \small{Instituições do setor elétrico brasileiro. Fonte: EPE \cite{CCEE_COM_QUEM_SE_RELACIONA}.}}
+	\end{figure}
+\end{itemize} 
+
+
+\paragraph{}Outra medida tomada para facilitar o gerenciamento de toda a rede de geração, transmissão, e consumo de energia elétrica, o Sistema Interligado Nacional - SIN\cite{SIN} foi divido em quatro subsistemas. Esses são: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. Vale ressaltar que existe conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca, como será visto posteriormente. 
+
+
+\begin{figure}[H]
+	\begin{center}
+		
+		\parbox[htb]{13.0cm}
+		
+		{
+			
+			\begin{center}
+				
+				\includegraphics[scale=0.6]{SistemadeTransmissao_Horizonte2017.jpg}
+				
+				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 \cite{SIN_MAPAS} }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{SIN_MAPAS}}}
+				
+			\end{center}
+			
+		}
+		
+	\end{center}
+	
+\end{figure}
+
+\paragraph{} Participam desse sistema diversos agentes\cite{SIN_GOVERNANCIA}, sendo eles: 
+\begin{itemize}
+	\item{\textbf{Agentes geradores}: são agentes autorizados a gerar energia elétrica para o sistema}
+	
+	\item{\textbf{Agentes de transmissão}: são agentes que detem o meios de transmissão de energia}
+	
+	\item{\textbf{Agentes de distribuição}: são agentes autorizados a distribuir energia contratada dos serviços de transmissão em uma área definida pela concessão}
+	
+	\item{\textbf{Consumidores livres}: são consumidores que tem a opção de escolher o distribuir de energia, diferente do que acontece no consumo doméstico}
+	
+	\item{\textbf{Agentes importadores}: gente titular de autorização expedida pela ANEEL para exercer as atividades de importação de energia elétrica*}
+	
+	\item{\textbf{Agentes exportadores}: São agentes titulares de autorização para implantação de sistemas de transmissão associados à exportação de energia elétrica*}
+	
+	\item{\textbf{Agente comercializador da energia de Itaipu}: por ser uma usina binacional, segue tratos tratos específicos. Atualmente a a comercializaçao desta energia é coordenada pela Eletrobras}
 \end{itemize}
 
-\paragraph{} Crise de 2007
+\paragraph{}A reestruturação também dividiu o mercado de energia elétrica brasileiro em dois ambientes de comercialização: Ambiente de Contratação Regulada - ACR e Ambiente de Contratação Livre - ACL. O primeiro ambiente é focado na contratação de energia para consumidores residenciais e indústrias de baixo consumo em geral. As negociações são feitas através de leilões onde geralmente os contratos de fornecimento de energia tem foco no médio e longo prazo (duração maior que 5 anos). As distribuidoras são obrigadas a comprar 100\% da energia utilizada através desse meio. O segundo ambiente é focado em contratações bilaterais, de forma a trazer benefícios para grande consumidores pois podem negociar o preço da energia direto com os geradores\cite{PRECO_SPOT}.
 
-\paragraph{} Crise de 2014-207
+\paragraph{} PLD
 
-
-\section{Como funciona o sistema elétrico no brasil}
+\section{Sistema elétrico brasileiro atual}
 \paragraph{}O Brasil possui uma matriz elétrica diferente do que em geral é observado no mundo. Em média 65,2\% da energia utilizada no país vem de fontes hidráulicas, diferente do que ocorre em média no resto do mundo (aproximadamente 16,6\%), assim como visto em\cite{MatrizEnergetica}. Essa fonte além de ser renovável, não polui o meio ambiente e tem custos menores quando comparado com fontes baseadas em combustíveis fósseis, assim como visto mais adiante. Apesar de todas essas vantagens, este tipo de geração necessita cuidado e planejamento, já que a energia produzida pelas hidrelétricas depende da disponibilidade de água nas barragens.
 
 \begin{figure}[H]
@@ -41,50 +98,15 @@
 \end{figure}
 
 
-\paragraph{}O Sistema Interligado Nacional - SIN é composto por toda estrutura responsável pela geração, distribuição e consumo de energia no Brasil\cite{SIN}. Devido ao tamanho do país, a pluralidade climática e geográfica existente, o SIN é divido em quatro subsistemas para facilitar a administração. Esses subsistemas são: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. O objetivo dessa divisão é facilitar o planejamento. Vale ressaltar que existe conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca, como será visto posteriormente. 
-
-
-\begin{figure}[H]
-	\begin{center}
-
-		\parbox[htb]{13.0cm}
-
-		{
-
-			\begin{center}
-
-				\includegraphics[scale=0.6]{SistemadeTransmissao_Horizonte2017.jpg}
-
-				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 \cite{SIN_MAPAS} }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{SIN_MAPAS}}}
-
-			\end{center}
-
-		}
-
-	\end{center}
-
-\end{figure}
-
-\paragraph{} Participam desse sistema diversos agentes\cite{SIN_GOVERNANCIA}, sendo eles: 
-\begin{itemize}
-	\item{\textbf{Agentes geradores}: são agentes autorizados a gerar energia elétrica para o sistema}
-	\item{\textbf{Agentes de transmissão}: são agentes que detem o meios de transmissão de energia}
-	\item{\textbf{Agentes de distribuição}: são agentes autorizados a distribuir energia contratada dos serviços de transmissão em uma área definida pela concessão}
-	\item{\textbf{Consumidores livres}: são consumidores que tem a opção de escolher o distribuir de energia, diferente do que acontece no consumo doméstico}
-	\item{\textbf{Agentes importadores}: gente titular de autorização expedida pela ANEEL para exercer as atividades de importação de energia elétrica*}
-	\item{\textbf{Agentes exportadores}: São agentes titulares de autorização para implantação de sistemas de transmissão associados à exportação de energia elétrica*}
-	\item{\textbf{Agente comercializador da energia de Itaipu}: por ser uma usina binacional, segue tratos tratos específicos. Atualmente a a comercializaçao desta energia é coordenada pela Eletrobras}
-\end{itemize}
-
-Mercado Livre
-
-Mercado Regulado
-
 Mercado de Curto Prazo
 
 Como funciona a PLD
 
 Histórico da PLD
+
+\paragraph{} Mesmo com essa reestruturação da organização, o SEB ainda passou por crises energéticas. Durante o período de racionamento (2001/06 - 2002/02) a foi menor do que a oferta, porém com o passar do anos ela voltou a se aproximar da curva de oferta. Após abril de 2005, houve um período sem investimento na capacidade. Junto com esse fato, ocorreu um período de baixa afluência nas usinas hidrelétricas, 
+
+\paragraph{} Crise de 2014-2017
 
 NEWAVE
 
