--- a/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -111,6 +111,10 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}CMSE - Comitê de Monitoramento do Setor Elétrico
 \paragraph{}ACR - Ambiente de Contratação Regulada
 \paragraph{}ACL - Ambiente de Contratação Livre
+\paragraph{}PLD - Preço de Liquidação das Diferenças
+\paragraph{}MCP - Mercado de Curto Prazo
+\paragraph{}DECOMP -
+\paragraph{}NEWAVE -
 \pagebreak
 
 
