--- a/Dissertacao/ProjetoFelipeClaudio/biblio.bib
+++ b/Dissertacao/ProjetoFelipeClaudio/biblio.bib
@@ -57,11 +57,19 @@
 }
 @MISC{
 	EPE_O_QUE_FAZEMOS,
-	AUTHOR = "EPEP",
+	AUTHOR = "EPE",
 	TITLE = "O que fazemos",
 	HOWPUBLISHED = "http://www.epe.gov.br/pt/a-epe/o-que-fazemos",
 	YEAR = "2019",
 	NOTE = "(Acesso em 31 Janeiro 2019)",
+}
+@MISC{
+	CCEE_PRECO_PLD,
+	AUTHOR = "CCEE",
+	TITLE = "Preço Médio da CCEE",
+	HOWPUBLISHED = "https://bit.ly/2UEGn10",
+	YEAR = "2019",
+	NOTE = "(Acesso em 4 de Fevereiro de 2019)",
 }
 @PHDTHESIS{
 	EvolucaoSetorEletrico,
@@ -79,11 +87,9 @@
 	YEAR = "2008",
 }
 @ARTICLE{
-	PRECO_SPOT,
-	AUTHOR = "Nivalde José de Castro",
-	AUTHOR = "André Luis da Silva Leite",
-	TITLE = "Preço spot de eletricidade: teoria e evidências do caso brasileiro",
-	JOURNAL = "IV Encontro de Enconomia Catarinense, 2010, Criciúma",
-	YEAR = "2010",
-}
+	PRECO_SPOT,
+	AUTHOR = "Nivalde José de Castro and André Luis da Silva Leite",
+	TITLE = "Preço spot de eletricidade: teoria e evidências do caso brasileiro",
+	JOURNAL = "IV Encontro de Enconomia Catarinense, 2010, Criciúma",
+	YEAR = "2010",
 }
