Added trend subsection

--- a/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -119,6 +119,7 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}CCEAR - Contrato de Comercialização de Energia ELétrica no Ambiente Regulado
 \paragraph{}PMO - Planejamento Mensal de Operação
 \paragraph{}CFURH - Compensação Financeira pelo Uso dos Recursos Hídricos
+\paragraph{}MLP - Multilayer Perceptron
 \pagebreak
 
 
