--- a/Dissertacao/ProjetoFelipeClaudio/Principal.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/Principal.tex
@@ -38,18 +38,29 @@
 \input{cap1}
 
 % ---------------------------------------------------------------
-% Chapter 2 - Informações Adicionais
+% Chapter 2 - O sistema elétrico brasileiro
 % ---------------------------------------------------------------
 \chapter{O sistema elétrico brasileiro}
 \label{cap2}
 \input{cap2}
 
+
+
 % ---------------------------------------------------------------
-% Chapter 3 - Conclusões
+% Chapter 3 - Series Temporais e Aprendizado de Máquina
 % ---------------------------------------------------------------
-\chapter{Conclusões}
+\chapter{Series Temporais e Aprendizado de Máquina}
 \label{cap3}
 \input{cap3}
+
+
+% ---------------------------------------------------------------
+% Chapter 6 - Conclusões
+% ---------------------------------------------------------------
+\chapter{Conclusões}
+\label{cap6}
+\input{cap6}
+
 
 % ---------------------------------------------------------------
 % Bibliografia
