--- a/Dissertacao/ProjetoFelipeClaudio/cap2.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/cap2.tex
@@ -157,7 +157,7 @@ O grande desafio do setor é utilizar a energia de maneira eficiente, reduzindo o
 	\caption[\small{Instituições do setor elétrico brasileiro \cite{}.}]{\label{PLDMensal} \small{Instituições do setor elétrico brasileiro. Fonte: CCEE \cite{CCEE_PRECO_PLD}.}}
 \end{figure}
 
-\paragraph{}ANo gráfico acima observa-se que existem pontos onde o SIN foi afetado por crises, fazendo com que o PLD aumentasse abruptamente. No ano de 2007 ocorreu a primeira mostrada no gráfico. O SEB tinha passado por uma recente reestruturação da organização, a qual não foi suficiente para evitar o acontecimento. Durante o período de racionamento (2001/06 - 2002/02) a demanda foi menor do que a oferta, porém com o passar do anos ela voltou a se aproximar da curva de oferta. Após abril de 2005, houve um período sem investimento na capacidade energética sistema. Junto com esse fato, ocorreu um período de baixa afluência nas usinas hidrelétricas.
+\paragraph{}No gráfico acima observa-se que existem pontos onde o SIN foi afetado por crises, fazendo com que o PLD aumentasse abruptamente. No ano de 2007 ocorreu a primeira mostrada no gráfico. O SEB tinha passado por uma recente reestruturação da organização, a qual não foi suficiente para evitar o acontecimento. Durante o período de racionamento (2001/06 - 2002/02) a demanda foi menor do que a oferta, porém com o passar do anos ela voltou a se aproximar da curva de oferta. Após abril de 2005, houve um período sem investimento na capacidade energética sistema. Junto com esse fato, ocorreu um período de baixa afluência nas usinas hidrelétricas.
 
 \paragraph{}Outra crise notável ocorreu no ano de 2014, onde segundo \cite{CRISE_2014}, houve a diminuição das tarifas imposta pelo governo em um momento de demanda crescente, o atraso em obras de geração e transmissão, além da escassez de chuvas.
 
@@ -259,7 +259,6 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 \paragraph{}Obter um modelo matemático baseado no DECOMP que possa ser utilizado na previsão do PLD é de interesse não só dos agentes que participam do mercado elétrico brasileiro, como também de empresas indiretamente relacionadas ao setor como consultorias e bancos, além de existir o viés acadêmico, pois o entendimento da dinâmica do preço pode ajudar na formulação de novos modelo de previsão e alteração do já existente, buscando melhoras nas atividades de planejamento feitas pelos órgãos.
 
 Em \cite{TCC_PLD} foi utilizada uma abordagem onde são previstos os valores de energia afluente, energia proveniente de hidroelétricas, energia proveniente de usinas térmicas e carga dos subsistemas, a fim de obter o valor do PLD indiretamente. A outra forma proposta foi utilizar a própria informação sobre o PLD na previsão do mesmo. Em ambos os casos, foram utilizadas redes neurais artificiais autorregressiva não-linear - NARNET e os valores previstos são para até 3 semanas à frente.
-
 
 \begin{figure}[H]
 	\centering
