--- a/Dissertacao/ProjetoFelipeClaudio/cap3.tex
+++ b/Dissertacao/ProjetoFelipeClaudio/cap3.tex
@@ -1,4 +1,77 @@
-\paragraph{}Tratam-se das considerações finais do trabalho, mostrando que os objetivos foram cumpridos e enfatizando as descobertas feitas durante o projeto. Em geral reserva-se um ou dois parágrafos para sugerir trabalhos futuros.
+\paragraph{}O objetivo deste capitulo é trazer a fundamentação teórica das técnicas utilizadas neste trabalho. Em primeiro lugar será abordada a teoria, aplicações e dificuldades relacionadas às séries temporais. Logo após, serão apresentados os modelos de aprendizados de máquina utilizados como redes neurais MLP e LSTM.
 
-\paragraph{}Observe que neste modelo a conclusão é numerada pelo numeral 3, mas o projeto não tem a obrigatoriedade de possuir apenas 3 capítulos. Alias, espera-se que tenha mais que isso.
+\section{Séries Temporais}
+\paragraph{}Uma série temporal é composta por uma coleção de observações feitas de forma sequencial e dependente [citar Apostila STEMP]. Essa ordem da sequência é dada pelo tempo, o qual pode ser contínuo ou discreto. No primeiro caso, $T = {t : t_1 < t < t_2}$ e a série temporal é definida como $\{X(t) : t \in T\}$, já no segundo caso, $T = \{t_1, t_2, ... , t_n\}$ e a série temporal é definida como $\{X_t : t \in T\}$, onde X é a variável observada. Geralmente define-se o T para o caso discreto como $T = \{1, 2, ..., n\}$ para o caso discreto por questões de simplicidade. Neste trabalho será utilizado o caso discreto, dado que a amostragem do sinal tem periodicidade mensal. Sendo assim, os exemplos dados no trabalho serão discretos também.
 
+\paragraph{}Assim como o tempo, os valores da variável $X_t$ podem ser contínuos ou discretos de acordo com o fenômeno que se observa. Alguns exemplos de fenômenos temporais com valores contínuos são a temperatura em um determinada região, volume de água em uma bacia hidrográfica e o peso de um indivíduo. Já como exemplo de fenômenos temporais com valores discretos podem ser citados o número  viagens de avião, quantidade de nascimentos, de carros produzidos por uma montadora e etc. Todos esse casos estão relacionados com um período de observação próprio, podendo ser uma janela de meses, anos, até mesmo décadas de observações de uma determinada variável.
+
+\paragraph{}A análise de séries temporais pode ser feita com diferentes intuitos, sendo os mais comuns a predição de valores futuros com base no histórico já conhecido, o controle de um processo, a explicação e descrição de fenômenos [citar STEMP].
+
+GRÁFICO com os 4 exemplos  
+
+Falar sobre a estacionalidade utilizada?
+
+\paragraph{}Buscando tornar a análise das séries temporais mais simples, além de facilitar a extração de informações importantes de maneira gráfica, é comum decompor a série em outras mais simples. A decomposição utilizada será a seguinte:
+
+[CITAR APOSTILA DO CALÔBA]
+\begin{equation*}
+	X_t = tend_t + sz_t + cs_t + res_t
+\end{equation*}
+
+\paragraph{}Onde $tend_t$ é a tendência, $sz_t$ é a sazonalidade, $cs_t$ é o ciclo senoidal e $res_t$ é o resíduo. Tanto a tendência, quanto a sazonalidade e os ciclos senoidais são determinísticos. Conforme [citar tcc Danilo], boa parte das séries temporais são não estacionárias, sendo que as componentes de tendência e sazonalidade são as maiores responsáveis por esse efeito. Para que o modelo com redes neurais faça boas previsões, que é o que se busca nesse trabalho, é necessário utilizar séries estacionárias, portanto somente a parte residual será usada na entrada das redes neurais.
+
+\subsection{Tendência}
+\paragraph{}Segundo [citar sTEMP], a tendência pode ser vista como "uma mudança de longo prazo no nível médio da série" e a forma mais simples de modelar pode ser vista pela equação a seguir. 
+
+\begin{equation}
+tend_t = \alpha + \beta t + \epsilon_t
+\end{equation}
+
+\paragraph{}Onde $\alpha$ e $\beta$ são constantes a serem estimadas e $\epsilon_t$ denota um erro aleatório com média zero. Geralmente chama-se o termo $m_t = \alpha + \beta t$ de termo de tendência. Alguns autores chamam o termo $\beta$ de tendência, já que $\beta = m_t - m_{t-1}$. Essa variável indica a inclinação da função durante o tempo.
+
+\paragraph{}A função utilizada na aproximação da tendência é pode ser escolhida de acordo com a série que está sendo analisada. Uma forma bastante comum é a utilização de tendência polinomial na extração de tendência.
+
+\paragraph{}Na tendência polinomial \ref{eqTendPoli}, busca-se fazer uma extração boa o suficiente para obter-se ao final do processamento a componente residual estacionária com média zero. Para séries monotonicamente crescente ou decrescente, utilizar $p = 1$ (função linear)  ou $p = 2$ (função quadrática) geralmente é suficiente para a extração da tendência, porém caso a série seja mais complexa, pode ser necessário utilizar funções de ordem mais altas
+
+\begin{equation} \label{eqTendPoli}
+tend_t = \epsilon_t + \sum_{n=0}^{p} \beta_n t^n
+\end{equation}
+
+\paragraph{}Alguns métodos de filtragem podem ser utilizado também na extração de tendência. É comum utilizar filtros lineares nessa tarefa. Esses são definidos pela seguinte equação:
+
+\begin{equation}
+y_t = \sum_{j = -q}^{s} a_jx_{t+j}
+\end{equation}
+
+\paragraph{}Onde $a_j$ são os pesos que multiplicam o sinal $x_{t+j}$. Para o filtro de médias móveis geralmente utiliza-se $q=s$ e $a_{-r} = a_r$, garantindo a simetria do filtro. Além disso faz-se que $\sum_{j = -q}^{s} a_j = 1$, de modo que $min\{x_t\} \leq y_t \leq max\{x_t\}$.
+
+Sendo o caso mais simples de média móvel aquele onde todos os pesos tem o mesmo valor:
+
+\begin{equation}
+y_t = \dfrac{1}{2q + 1} \sum_{j = -q}^{q} x_{t + j}
+\end{equation}
+
+\paragraph{}O resultado do filtro acima é não-causal, o que impede que o processamento seja realizado em tempo real. Sendo assim, uma outra abordagem possível é fazer um deslocamento no filtro para que sejam utilizadas somente amostras do passado, conforme a equação a seguir:
+
+\begin{equation}
+	y_t =  \dfrac{1}{2q + 1} \sum_{j = -2q}^{0} x_{t+j}
+\end{equation} 
+
+\paragraph{}Outro problema observado nas abordagens de média móvel descritos acima é que somente é que só se obtém a tendência para $N - 2q$ pontos. Caso seja necessário obter a tendência para todos os pontos da série, pode-se aplicar métodos de extrapolação sobre o resultado obtido.
+
+\paragraph{}Uma terceira abordagem para extração de tendência é utilizar um filtro com pesos que decaem geometricamente, com j, priorizando assim, as amostras mais recentes da série temporal:
+
+\begin{equation}
+y_t = \sum_{j=0}^{\infty} \alpha (1 - \alpha)^j x_{t-j}
+\end{equation}
+
+\paragraph{}Outra forma de extrair a tendência é através da diferenciação. Para dados não sazonais, a primeira diferença costuma ser suficiente para garantir a estacionariedade aproximada da série  restante [citar sTEMP]:
+
+\begin{equation}
+y_t = x_t - x_{t-1} = \nabla x_t
+\end{equation}
+
+\subsection{Sazonalidade}
+\paragraph{}É comum encontrar nas séries observadas alguns padrões que se repetem periodicamente. Esse efeito é denominado sazonalidade e deve ser removido para que se obtenha ao final do processamento uma série residual estacionária [citar Calôba].
+
+\paragraph{}A periodicidade do fenômeno sazonal pode ser obtida através do conhecimento prévio da série que está sendo analisada ex: Espera-se que a venda de protetores solares seja maior no período de verão, pois é quando as pessoas costumam ir mais às praias. O número de pessoas que frequentam o metrô deve diminuir durante o fim de semana, pois a maioria trabalha durante a semana etc.
